@@ -1,3 +1,8 @@
+multi-ldap (1.1.3)
+  * Add Thunderbird 3.1 compatibility
+  * Fix UI refresh when adding/removing directories
+-- Jul 28 2010
+
 multi-ldap (1.1.2)
   * Fix LDAP authentication with password under Thunderbird 3
 -- May 7 2010
